--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,600;1,400&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="style.css">n
-  <script src="index.js"></script>
+  <script src="script.js"></script>
 </head>
 
 <body>
