--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,600;1,400&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="style.css">n
+  <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
 </head>
 
