optimised code in script

--- a/index.html
+++ b/index.html
@@ -177,12 +177,7 @@
       currentOperand.innerHTML = calculation;
     }
 
-    window.addEventListener("resize", () => {
-      const minHeight = 480;
-      if (window.innerHeight < minHeight) {
-        window.innerHeight = minHeight;
-      }
-    });</script>
+    </script>
 </body>
 
 </html>
