chore: Refactor calculation logic in script.js

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>Calculator</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,600;1,400&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
@@ -26,149 +26,39 @@
     </div>
 
     <p>
-      <button class="calculator-button gray-button" onclick="
-          updateCalculation('1');
-        ">1</button>
-
-      <button class="calculator-button gray-button" onclick="
-          updateCalculation('2');
-        ">2</button>
-
-      <button class="calculator-button gray-button" onclick="
-          updateCalculation('3');
-        ">3</button>
-
-      <button class="calculator-button orange-button" onclick="
-          updateCalculation(' + ');
-        ">+</button>
+      <button class="calculator-button gray-button" onclick="updateCalculation('1');">1</button>
+      <button class="calculator-button gray-button" onclick="updateCalculation('2');">2</button>
+      <button class="calculator-button gray-button" onclick="updateCalculation('3');">3</button>
+      <button class="calculator-button orange-button" onclick="updateCalculation(' + ');">+</button>
     </p>
 
     <p>
-      <button class="calculator-button gray-button" onclick="
-          updateCalculation('4');
-        ">4</button>
-
-      <button class="calculator-button gray-button" onclick="
-          updateCalculation('5');
-        ">5</button>
-
-      <button class="calculator-button gray-button" onclick="
-          updateCalculation('6');
-        ">6</button>
-
-      <button class="calculator-button orange-button" onclick="
-          updateCalculation(' - ');
-        ">-</button>
+      <button class="calculator-button gray-button" onclick="updateCalculation('4');">4</button>
+      <button class="calculator-button gray-button" onclick="updateCalculation('5');">5</button>
+      <button class="calculator-button gray-button" onclick="updateCalculation('6');">6</button>
+      <button class="calculator-button orange-button" onclick="updateCalculation(' - ');">-</button>
     </p>
 
     <p>
-      <button class="calculator-button gray-button" onclick="
-          updateCalculation('7');
-        ">7</button>
-
-      <button class="calculator-button gray-button" onclick="
-          updateCalculation('8');
-        ">8</button>
-
-      <button class="calculator-button gray-button" onclick="
-          updateCalculation('9');
-        ">9</button>
-
-      <button class="calculator-button orange-button" onclick="
-          updateCalculation(' * ');
-        ">*</button>
+      <button class="calculator-button gray-button" onclick="updateCalculation('7');">7</button>
+      <button class="calculator-button gray-button" onclick="updateCalculation('8');">8</button>
+      <button class="calculator-button gray-button" onclick="updateCalculation('9');">9</button>
+      <button class="calculator-button orange-button" onclick="updateCalculation(' * ');">*</button>
     </p>
 
     <p>
-      <button class="calculator-button gray-button" onclick="
-          updateCalculation('0');
-        ">0</button>
-
-      <button class="calculator-button gray-button" onclick="
-          updateCalculation('.');
-        ">.</button>
-
-      <button class="calculator-button gray-button" onclick="
-          calculation = eval(previousOperand.innerHTML+currentOperand.innerHTML);
-          previousOperand.innerHTML=''
-          if(curDecimalDigits && prevDecimalDigits){
-            calculation=Number(calculation).toFixed(eval(curDecimalDigits+'+'+prevDecimalDigits));
-            calculation=String(calculation);
-            if (Number(calculation.split('.')[calculation.split('.').length - 1]) === 0) {
-                console.log(Number(calculation.split('.')[calculation.split('.').length - 1]))
-                calculation = calculation.split('.')[0];
-              }
-            calculation=Number(calculation);
-          }
-          displayCalculation();
-  
-          localStorage.setItem('calculation', calculation);
-        ">=</button>
-
-      <button class="calculator-button orange-button" onclick="
-          updateCalculation(' / ');
-        ">/</button>
+      <button class="calculator-button gray-button" onclick="updateCalculation('0');">0</button>
+      <button class="calculator-button gray-button" onclick="updateCalculation('.');">.</button>
+      <button class="calculator-button gray-button" onclick="calculateResult();">=</button>
+      <button class="calculator-button orange-button" onclick="updateCalculation(' / ');">/</button>
     </p>
 
     <p>
-      <button class="calculator-button gray-button clear-button" onclick="
-          calculation = '';
-          previousOperand.innerHTML=''
-  
-          displayCalculation();
-  
-          localStorage.setItem('calculation', calculation);
-        ">Clear</button>
-
-      <button class="calculator-button gray-button delete-button" onclick="
-        calculation=calculation.toString().slice(0,-1);
-        displayCalculation();
-        localStorage.setItem('calculation', calculation);
-  
-        ">Del</button>
+      <button class="calculator-button gray-button clear-button" onclick="clearCalculation();">Clear</button>
+      <button class="calculator-button gray-button delete-button" onclick="deleteLast();">Del</button>
     </p>
   </div>
-  <script>let calculation = localStorage.getItem('calculation') || '';
-    const currentOperand = document.querySelector('.current');
-    const previousOperand = document.querySelector('.previous');
-    let prevDecimalDigits = null;
-    let curDecimalDigits = null;
-
-
-    displayCalculation();
-
-    function updateCalculation(value) {
-      if (value === '.' && currentOperand.innerHTML.includes('.'))
-        return
-
-      else if (value !== '.' && isNaN(value)) {
-        if (previousOperand.innerHTML === '') {
-          previousOperand.innerHTML = currentOperand.innerHTML + value;
-          prevDecimalDigits = previousOperand.innerHTML.split('.')[previousOperand.innerText.split('.').length - 1].length - 3 || null;
-        }
-        else {
-          if (curDecimalDigits && prevDecimalDigits) {
-            calculation = Number(Number(eval(previousOperand.innerHTML + currentOperand.innerHTML))
-              .toFixed(eval(curDecimalDigits + '+' + prevDecimalDigits)));
-            previousOperand.innerHTML = calculation + value;
-          }
-        }
-        calculation = '';
-      }
-      else {
-        calculation += value;
-      }
-      displayCalculation();
-      curDecimalDigits = currentOperand.innerHTML.split('.')[currentOperand.innerHTML.split('.').length - 1].length || null;
-
-      localStorage.setItem('calculation', calculation);
-    }
-
-    function displayCalculation() {
-      currentOperand.innerHTML = calculation;
-    }
-
-  </script>
+  <script src="script.js"></script>
 </body>
 
 </html>
